--- a/00 Doc/TableauProject2.Rmd
+++ b/00 Doc/TableauProject2.Rmd
@@ -5,9 +5,11 @@ output: html_document
 Rhoda Jiao and Maytee Chantharayukhont
 
 ```{r, warning = FALSE}
-source("../01 SQL Crosstabs/libraries.R", echo = TRUE)
+source("../01 SQL Crosstabs/libraries.R", echo = FALSE)
 source("../01 SQL Crosstabs/universitydata.R", echo = TRUE)
 ```
 <img src="../00 Doc/rank.png" />
 <img src="../00 Doc/maxDiff.png" />
+<img src="../00 Doc/nth.png" />
+<img src="../00 Doc/cumeDist.png" />
 
